--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
 </head>
 <body>
     
-    <header></header>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Menu 1</a></li>
+                <li><a href="#">Menu 2</a></li>
+                <li><a href="#">Menu 3</a></li>
+                <li><a href="#">Menu 4</a></li>
+                <li><a href="#">Menu 5</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <nav></nav>
+    
 
     <main></main>
 
