--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
                 <li><a href="#">Menu 5</a></li>
             </ul>
         </nav>
+
+        <div class="cart">
+            <span>0</span>
+            <a href="/cart/">To cart</a>
+        </div>
     </header>
 
     
