add cart to header

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         <nav>
             
         </nav>
+
+        <div class="cart">
+            <a href="/cart/">Товаров: <span>0</span>, на сумму <span>0</span> руб.</a>
+        </div>
+
     </header>
 
     <footer>Footer</footer>
