I added a section with a form

--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
         </nav>
     </header>
 
+    <section class="contact">
+        <div class="container">
+            <h2>Обратная связь</h2>
+            <form class="contact__form">
+                <label for="name">Имя:</label>
+                <input type="text" placeholder="Ваше имя">
+
+                <label for="phone">Телефон:</label>
+                <input type="tel" placeholder="+375 (___) ___-___-___">
+
+                <button type="submit">Отправить</button>
+            </form>
+        </div>
+    </section>
+
     <footer>Footer</footer>
 
 </body>
