--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
     
     <header>
         <nav>
+            <ul class="nav">
+                <li><a href="#1">Menu1</a></li>
+                <li><a href="#2">Menu2</a></li>
+                <li><a href="#3">Menu3</a></li>
+                <li><a href="#4">Menu4</a></li>
+                <li><a href="#5">Menu5</a></li>
+            </ul>
             
         </nav>
     </header>
